k8s/dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/websocket-services: "api-gateway-srv"
spec:
  rules:
    - host: mini.ecom
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gateway-srv
                port:
                  number: 3000
